--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "babel-plugin-istanbul": "latest",
     "browser-sync": "latest",
     "browser-sync-webpack-plugin": "latest",
+    "cordova-android": "^9.0.0",
+    "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-whitelist": "^1.3.4",
     "css-loader": "latest",
     "file-loader": "latest",
     "mini-css-extract-plugin": "latest",
@@ -30,9 +34,21 @@
     "node": ">=10"
   },
   "dependencies": {
+    "cordova": "^10.0.0",
+    "cordova-res": "^0.15.3",
     "material-design-icons": "^3.0.1",
     "materialize-css": "^1.0.0-rc.2",
     "materialize-social": "^1.0.3",
     "nouislider": "^14.6.3"
+  },
+  "cordova": {
+    "platforms": [
+      "android"
+    ],
+    "plugins": {
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-whitelist": {}
+    }
   }
 }
